fix interfaces ranim